그룹요청 승인, 거절기능 추가

--- a/setting_group.html
+++ b/setting_group.html
@@ -73,7 +73,7 @@
             <!-- <li><a class="waves-effect modal-trigger" href="#modal1">글쓰기</a></li> -->
             <li><a class="waves-effect" href="/new_post/">글쓰기</a></li>
             <li><a class="waves-effect" href="#!">게시판</a></li>
-            <li><a class="waves-effect" href="/setting">설정</a></li>
+            <li><a class="waves-effect" href="#!">설정</a></li>
             <li><a class="waves-effect" href="/accounts/logout/">로그아웃</a></li>
         </ul>
 
