--- a/nodejs/client.html
+++ b/nodejs/client.html
@@ -72,7 +72,7 @@
         </nav>
         <br><br><br><br>
 
-        <div class="container" style="width: 700px; height: 500px; background-color: white; overflow-y: scroll;" id="chatLog">
+        <div class="container" style="width: 700px; height: 500px; background-color: white; overflow-y: scroll; overflow-x: hidden;" id="chatLog">
             <br>
         </div>
 
@@ -97,27 +97,27 @@
             </li>
             <li>
                 <img style="position: absolute; margin-top: 10px; margin-left: 0px; width: 30px; height: 30px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/post.png" />
-                <a class="waves-effect" href="/new_post/">글쓰기</a>
+                <a class="waves-effect" href="http://layer7.kr:3333/new_post?ts=2001-01-01">글쓰기</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/notice.png" />
-                <a class="waves-effect" href="/notice">공지사항</a>
+                <a class="waves-effect" href="http://layer7.kr:3333/notice?ts=2001-01-01">공지사항</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/board.png" />
-                <a class="waves-effect" href="/board">게시판</a>
+                <a class="waves-effect" href="http://layer7.kr:3333/board?ts=2001-01-01">게시판</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/chat.png" />
-                <a class="waves-effect" href="http://127.0.0.1:3000/{{ user.name }}">채팅</a>
+                <a class="waves-effect" href="http://layer7.kr:3000/{{ user.name }}">채팅</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/setting.png" />
-                <a class="waves-effect" href="/setting">설정</a>
+                <a class="waves-effect" href="http://layer7.kr:3333/setting?ts=2001-01-01">설정</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/logout.png" />
-                <a class="waves-effect" href="/accounts/logout/">로그아웃</a>
+                <a class="waves-effect" href="http://layer7.kr/accounts/logout/">로그아웃</a>
             </li>
         </ul>
 
