메인화면에 유저정보 추가

--- a/nodejs/client.html
+++ b/nodejs/client.html
@@ -64,7 +64,7 @@
             <div class="nav-wrapper" style="background-color: white;">
                 <img src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/logo.png" alt="" style="width: 50px; height: 50px; margin-left: 5px; margin-top: 5px;"/>
 
-                <a href="http://127.0.0.1:3333/?ts=2000-01-01" id="group-name" class="brand-logo center" style="color: grey;"></a>
+                <a href="http://127.0.0.1:3001/?ts=2000-01-01" id="group-name" class="brand-logo center" style="color: grey;"></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="#" data-activates="slide-out" id="button-collapse"><i style="color: black;" class="material-icons">menu</i></a></li>
                 </ul>
@@ -97,15 +97,15 @@
             </li>
             <li>
                 <img style="position: absolute; margin-top: 10px; margin-left: 0px; width: 30px; height: 30px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/post.png" />
-                <a class="waves-effect" href="http://layer7.kr:3333/new_post?ts=2001-01-01">글쓰기</a>
+                <a class="waves-effect" href="http://layer7.kr:3001/new_post?ts=2001-01-01">글쓰기</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/notice.png" />
-                <a class="waves-effect" href="http://layer7.kr:3333/notice?ts=2001-01-01">공지사항</a>
+                <a class="waves-effect" href="http://layer7.kr:3001/notice?ts=2001-01-01">공지사항</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/board.png" />
-                <a class="waves-effect" href="http://layer7.kr:3333/board?ts=2001-01-01">게시판</a>
+                <a class="waves-effect" href="http://layer7.kr:3001/board?ts=2001-01-01">게시판</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/chat.png" />
@@ -113,11 +113,11 @@
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/setting.png" />
-                <a class="waves-effect" href="http://layer7.kr:3333/setting?ts=2001-01-01">설정</a>
+                <a class="waves-effect" href="http://layer7.kr:3001/setting?ts=2001-01-01">설정</a>
             </li>
             <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/logout.png" />
-                <a class="waves-effect" href="http://layer7.kr/accounts/logout/">로그아웃</a>
+                <a class="waves-effect" href="http://layer7.kr:3001/accounts/logout/">로그아웃</a>
             </li>
         </ul>
 
