글삭제 기능추가

--- a/nodejs/client.html
+++ b/nodejs/client.html
@@ -64,7 +64,7 @@
             <div class="nav-wrapper" style="background-color: white;">
                 <img src="https://raw.githubusercontent.com/dhkim2013/dhkim2013.github.io/master/images/dc/logo.png" alt="" style="width: 50px; height: 50px; margin-left: 5px; margin-top: 5px;"/>
 
-                <a href="http://127.0.0.1:3001/?ts=2000-01-01" id="group-name" class="brand-logo center" style="color: grey;"></a>
+                <a href="http://layer7.kr:3001/?ts=2000-01-01" id="group-name" class="brand-logo center" style="color: grey;"></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="#" data-activates="slide-out" id="button-collapse"><i style="color: black;" class="material-icons">menu</i></a></li>
                 </ul>
